--- a/DashSource/Properties/Settings.settings
+++ b/DashSource/Properties/Settings.settings
@@ -8,10 +8,31 @@
     <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=INFINITYCASTLE;Initial Catalog=test;Persist Security Info=True;User ID=backo;Password=letmein3&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=VASILS02\POWERBI;Initial Catalog=dailyreport;Persist Security Info=True;User ID=admin;Password=admin&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=INFINITYCASTLE;Initial Catalog=test;Persist Security Info=True;User ID=backo;Password=letmein3</Value>
+      <Value Profile="(Default)">Data Source=VASILS02\POWERBI;Initial Catalog=dailyreport;Persist Security Info=True;User ID=admin;Password=admin</Value>
+    </Setting>
+    <Setting Name="emailInputFolderSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">input</Value>
+    </Setting>
+    <Setting Name="emailProcessedFolderSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">processed</Value>
+    </Setting>
+    <Setting Name="inputDirectorySetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\vasils\Desktop\DailyReport Project\INPUT\</Value>
+    </Setting>
+    <Setting Name="userSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">vasils@amdocs.com</Value>
+    </Setting>
+    <Setting Name="passwordSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Alkash888</Value>
+    </Setting>
+    <Setting Name="logPathSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">log\DashboardLog.txt</Value>
+    </Setting>
+    <Setting Name="archiveDirSetting" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\Users\vasils\Desktop\DailyReport Project\ARCHIVE\</Value>
     </Setting>
   </Settings>
 </SettingsFile>
